--- a/requirements.txt
+++ b/requirements.txt
@@ -218,7 +218,7 @@ ruamel.yaml.clib==0.2.7
 scikit-image==0.19.0
 scikit-learn==1.0.2
 scipy==1.7.3
--e git+ssh://git@github.com/facebookresearch/segment-anything.git@6fdee8f2727f4506cfbbe553e23b895e27956588#egg=segment_anything
+-e git+https://git@github.com/facebookresearch/segment-anything.git@6fdee8f2727f4506cfbbe553e23b895e27956588#egg=segment_anything
 Send2Trash==1.8.0
 sentencepiece==0.1.98
 setproctitle==1.3.2
